# xfeat

./: .gitignore  Makefile  README.md  environment.yml  requirements.txt  sample_edge.py  sample_pyvista-v1.py  sample_pyvista.py  sample_screw.py  sample_v1.py  setup.cfg  setup.py
Fe_MD/: Fe101-fire-disloc-sample.param  Fe101-glok-sample.param  bcc_edge_relax.param  crystal.conf
examples/Fe_dislocation/: edge_dis_bcc.py  screw_dis_bcc.py
examples/Fe_screw_dislocation/: sample_v1.py  screw_dis_bcc.py
libs/imd/: version.h
notebooks/: edge-dis-bccFe.ipynb  screw-dis-bccFe.ipynb
src/xfeat/: .main.pyx.swp  __init__.py  basic.cpp  basic.pyx  cpp_wrapper.cpp  cpp_wrapper.h  cpp_wrapper.pxd  main.cpp  main.pyx
src/xfeat/CPP/: Atom_Set_Up.cpp  Atoms.cpp  Atoms.new  Coupling.cpp  FEM_Mesh.cpp  Init_Dislocation.cpp  XFEM.cpp
tests/: test_basic.py
