[metadata]
name = xfeat
version = 0.1.1
description = eXtended Finite Elements with Atomistics
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3
author = Alexander Hartmaier
author_email = alexander.hartmaier@rub.de
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: GNU GPL v3
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mechanics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
